# ShrinkingApp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
packaging/: shrinkingapp.desktop.in
scripts/: bootstrap-ubuntu.sh  install-desktop-launcher.sh  run-dev.sh  sync-from-mac.sh
src/shrinkingapp/: __init__.py  app.py  logging_utils.py  models.py
src/shrinkingapp/core/: __init__.py  manifests.py  progress.py  validators.py
src/shrinkingapp/system/: __init__.py  commands.py  compression.py  devices.py  endpoints.py  filesystems.py  images.py  loopdev.py  partitions.py  storage.py
src/shrinkingapp/ui/: __init__.py  controller.py  main.py  theme.py  widgets.py
src/shrinkingapp/workflows/: __init__.py  capture.py  restore.py  shrink.py
tests/unit/: test_commands.py  test_controller.py  test_devices.py  test_endpoints.py  test_images.py  test_partitions.py  test_storage.py  test_validators.py
